--- a/Projeto/src/index.html
+++ b/Projeto/src/index.html
@@ -16,7 +16,9 @@
     crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200&family=Roboto&family=Staatliches&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
